<resources>
    <string name="app_name">智能桌面</string>

    <!-- 公共提示语 -->
    <string name="processing">正在处理</string>
    <string name="pls_hold_on">请稍候&#8230;</string>
    <string name="success">成功</string>
    <string name="fail">失败</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="tip">提示</string>
    <string name="exist">退出</string>
    <string name="unknown">未知</string>
    <string name="amountUnit">￥</string>
    <string name="amount">金额</string>
    <string name="bank_card">银行卡</string>
    <string name="unknown_type">未知类型</string>
    <string name="doing_something">正在处理中</string>

    <!-- 异常提示语 -->
    <string name="net_work_is_not_available">网络不可用，请检查网络连接</string>
    <string name="unknown_host_exception">服务器不存在</string>
    <string name="connect_exception">连接失败，请检查网络状态</string>
    <string name="response_exception">服务器响应超时，请稍候重试</string>
    <string name="unknown_exception">未知异常</string>

    <!--自定义数字键盘-->
    <string name="keyboard_cancel">取消</string>
    <string name="keyboard_back">退格</string>
    <string name="keyboard_confirm">确认</string>
    <string name="keyboard_maxlenis">Max len is:</string>
    <string name="keyboard_maxValueis">Max value is:</string>

    <!-- 应用下载更新相关 -->
    <string name="apk_name_desc">应用名称：</string>
    <string name="apk_version_name">版本号：</string>
    <string name="apk_size">文件大小：</string>
    <string name="update_message">更新内容：</string>
    <string name="version_info_tips">版本提示</string>
    <string name="downloading">正在下载</string>
    <string name="connecting">正在连接</string>
    <string name="start_download">开始下载</string>
    <string name="download_fail">下载失败</string>
    <string name="click_to_install">点击安装</string>
    <string name="md5_check_fail">MD5校验失败</string>
    <string name="has_no_new_version">暂无新版本</string>
    <string name="check_version_update">检查版本更新</string>
    <string name="check_whether_has_new_version">正在检查是否有新版本，请稍候...</string>

    <string name="setting">设置</string>
    <string name="pls_input_admin_password">请输入管理员密码</string>
    <string name="already_new_version">已经是最新版本</string>
    <string name="input_is_empty">输入内容为空</string>

    <!-- 首页相关 -->
    <string name="main_title">盛迪嘉智能桌面</string>
    <string name="cash_register">收银</string>
    <string name="sign_in">签到</string>
    <string name="other">其他</string>
    <string name="manager">管理</string>
    <string name="print">打印</string>
    <string name="merchant_info">商户信息</string>
    <string name="trans_list">交易明细</string>
    <string name="trans_detail">交易详情</string>
    <string name="system_setting">系统设置</string>
    <string name="version_info">版本信息</string>

    <!-- 登录相关 -->
    <string name="login">登录</string>
    <string name="forget_password">忘记密码?</string>
    <string name="sdj_payment">盛迪嘉支付</string>
    <string name="input_operator">请输入操作员编号</string>
    <string name="input_operator_password">请输入操作员密码</string>
    <string name="user_no">编号</string>
    <string name="user_password">密码</string>
    <string name="password_error">密码错误</string>
    <string name="input_user_no_is_empty">输入编号不可为空</string>
    <string name="input_password_is_empty">输入密码不可为空</string>
    <string name="pls_contact_admin">请联系管理员</string>
    <string name="user_no_is_no_exist">该操作员编号不存在</string>

    <!-- 版本信息相关 -->
    <string name="check_update">版本检测</string>
    <string name="is_newest_version">已是最新版本</string>

    <!-- 操作员相关 -->
    <string name="user_info">操作员</string>
    <string name="operator_id">序号</string>
    <string name="operator_no">编号</string>
    <string name="operate">操作</string>
    <string name="add">添加</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="operator_list_is_empty">操作员列表为空</string>
    <string name="this_operator_is_exist">该操作员已存在</string>
    <string name="add_success">添加成功</string>
    <string name="password_update_success">修改成功</string>
    <string name="delete_success">删除成功</string>
    <string name="need_to_sign_by_admin_operator">需要主管签到进行此项操作</string>
    <string name="can_no_edit_the_other_operator_info">非主管不可编辑其他操作员信息</string>
    <string name="err_input">输入格式不正确</string>
    <string name="disagree_password">输入密码不一致</string>
    <string name="delete_operator">删除操作员</string>
    <string name="delete_content_1">确定删除编号为‘</string>
    <string name="delete_content_2">’操作员信息？</string>
    <string name="new_password">新  密  码</string>
    <string name="confirm_password">确认密码</string>
    <string name="manager_desc">系统管理员</string>
    <string name="admin_desc">系统主管</string>
    <string name="operator_desc">普通操作员</string>

    <!-- 交易明细 -->
    <string name="trans_list_print_detail">打印明细</string>
    <string name="please_input_voucher_no">请输入交易流水号</string>
    <string name="pre_page">上一页</string>
    <string name="next_page">下一页</string>
    <string name="trade_type">交易类型</string>
    <string name="trade_time">交易时间</string>
    <string name="voucher_no">凭证号</string>
    <string name="card_no">卡号</string>
    <string name="recalled">已撤销</string>
    <string name="is_upload">已上送</string>
    <string name="un_upload">未上送</string>
    <string name="upload_fail">上送失败</string>
    <string name="upload_rejected">上送被拒</string>
    <string name="has_no_trans_record">暂无交易记录</string>
    <string name="trace_num_not_exist">该凭证号不存在</string>
    <string name="loading">加载中…</string>
    <string name="has_no_more_data">没有更多数据了</string>

    <!-- 商户信息相关 -->
    <string name="merchant_name">商户名称</string>
    <string name="merchant_no">商户编号</string>
    <string name="terminal_no">终端编号</string>
    <string name="merchant_user_name">商户姓名</string>
    <string name="bank_account_no">结算账户</string>
    <string name="merchant_address">商户地址</string>

    <!-- 添加、编辑操作员 -->
    <string name="add_user">添加操作员</string>
    <string name="edit_user">编辑操作员</string>
    <string name="user_no_is_exist">该操作员编号已存在</string>
    <string name="input_password_is_no_eq">输入密码不一致</string>
    <string name="can_no_delete_unless_supervisor">非主管操作员，不可删除</string>
    <string name="can_no_edit_unless_supervisor">非主管操作员，不可编辑</string>
    <string name="edit_success">修改成功</string>

    <!-- 设置界面相关 -->
    <string name="wifi_setting">无线WIFI设置</string>
    <string name="mobile_data_setting">移动网络设置</string>
    <string name="display_setting">显示设置</string>
    <string name="suth_setting">权限设置</string>
    <string name="device_info">设备信息</string>
    <string name="signature_setting">电子签名设置</string>
    <string name="print_setting">打印相关设置</string>
    <string name="settle_setting">结算相关设置</string>

    <!-- 设置子界面相关 -->
    <string name="is_print_sales_slip">是否打印签购单</string>
    <string name="service_hotline">服务热线设置</string>
    <string name="print_times">打印联数(1–3)</string>
    <string name="print_param_setting">打印参数设置</string>
    <string name="is_only_settle_current_day_data">是否只结算当日数据</string>
    <string name="settle_param_setting">结算参数设置</string>
    <string name="setup_signature_title">电子签名设置</string>
    <string name="is_support_elec_signature">是否支持电子签名</string>
    <string name="is_show_confirm_signature">是否提示确认签名</string>
    <string name="signature_time_out">签名超时时间(s)</string>
    <string name="max_signature_times">最大重签次数</string>

    <!-- 收银台界面相关 -->
    <string name="input_amount">请输入交易金额</string>
    <string name="confirm_amount">请确认金额</string>
    <string name="checkout_counter">收银台</string>

</resources>
