<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_layout_bg"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".client.activity.login.LoginActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:layout_gravity="center"
        android:contentDescription="logo"
        android:src="@drawable/login_logo"/>

    <TextView
        android:id="@+id/tv_welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:textColor="@color/lightgray"
        android:textSize="18sp"
        android:text="@string/sdj_payment"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textColorHint="@color/lightgray"
            android:hint="@string/user_no">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/user_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:inputType="number"
                android:maxLength="2"
                android:lines="1"
                android:tag="userNo"
                android:textSize="16sp"
                android:textColor="@color/lightgray"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:textColorHint="@color/lightgray"
            android:hint="@string/user_password">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:inputType="numberPassword"
                android:maxLength="8"
                android:lines="1"
                android:tag="password"
                android:textSize="16sp"
                android:textColor="@color/lightgray"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|start"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:text="@string/forget_password"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="24dp"
        android:gravity="center"
        android:background="@drawable/login_btn_bg"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/login" />

</LinearLayout>