<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/holo_blue_light"
    tools:context=".client.activity.main.MainActivity">

    <include layout="@layout/include_title_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="15dp">



    </LinearLayout>

    <com.stx.xhb.xbanner.XBanner
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:AutoPlayTime="5000"
        app:pointsPosition="RIGHT"
        app:tipTextSize="12sp"
        app:pointNormal="@drawable/shape_point_normal"
        app:pointSelect="@drawable/shape_point_selected"
        app:pageChangeDuration="800"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:padding="10dp">

        <com.smart.desktop.common.widget.IconButton
            android:id="@+id/btn_merchant"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/btn_blue_circle_bg"
            android:drawableLeft="@drawable/merchants_icon"
            app:iconPadding="10dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/merchant_info"/>

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"/>

        <com.smart.desktop.common.widget.IconButton
            android:id="@+id/btn_trans_detail"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/btn_blue_circle_bg"
            android:drawableLeft="@drawable/trans_icon"
            app:iconPadding="10dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/trans_detail"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="15dp">

        <com.smart.desktop.common.widget.IconButton
            android:id="@+id/btn_sys_setting"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/btn_blue_circle_bg"
            android:drawableLeft="@drawable/sale_icon"
            app:iconPadding="10dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/system_setting"/>

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"/>

        <com.smart.desktop.common.widget.IconButton
            android:id="@+id/btn_version"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/btn_blue_circle_bg"
            android:drawableLeft="@drawable/version_icon"
            app:iconPadding="10dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/version_info"/>

    </LinearLayout>

</LinearLayout>